--- a/incidents_eda.ipynb
+++ b/incidents_eda.ipynb
@@ -5,8 +5,9 @@
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-10-06T14:18:07.373079Z",
+     "start_time": "2024-10-06T14:18:07.366924Z"
     }
    },
    "source": [
@@ -21,13 +22,13 @@
     "from incidents_dataset import load_compressed_images"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:11:30.506693Z",
-     "start_time": "2024-10-06T14:11:30.499669Z"
+     "end_time": "2024-10-06T14:18:08.873661Z",
+     "start_time": "2024-10-06T14:18:08.867048Z"
     }
    },
    "cell_type": "code",
@@ -48,13 +49,13 @@
    ],
    "id": "3595b72a7a6bcb24",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:11:56.418191Z",
-     "start_time": "2024-10-06T14:11:36.294634Z"
+     "end_time": "2024-10-06T14:18:29.545800Z",
+     "start_time": "2024-10-06T14:18:11.516616Z"
     }
    },
    "cell_type": "code",
@@ -96,7 +97,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "121dfba59f844dd3a919eabfd347698f"
+       "model_id": "6ffa775f857a4068993a2fbb57778637"
       }
      },
      "metadata": {},
@@ -109,15 +110,15 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[6], line 11\u001B[0m\n\u001B[1;32m      8\u001B[0m generator \u001B[38;5;241m=\u001B[39m batch_generator(batch_size)\n\u001B[1;32m     10\u001B[0m \u001B[38;5;66;03m# partial_fit: Incremental PCA의 주성분을 점진적으로 학습\u001B[39;00m\n\u001B[0;32m---> 11\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m (batch, labels) \u001B[38;5;129;01min\u001B[39;00m tqdm(generator, ncols\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m75\u001B[39m):\n\u001B[1;32m     12\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m batch\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m1\u001B[39m:  \u001B[38;5;66;03m# 배치 크기가 1보다 큰 경우만 처리\u001B[39;00m\n\u001B[1;32m     13\u001B[0m         ipca\u001B[38;5;241m.\u001B[39mpartial_fit(batch)\n",
+      "Cell \u001B[0;32mIn[4], line 11\u001B[0m\n\u001B[1;32m      8\u001B[0m generator \u001B[38;5;241m=\u001B[39m batch_generator(batch_size)\n\u001B[1;32m     10\u001B[0m \u001B[38;5;66;03m# partial_fit: Incremental PCA의 주성분을 점진적으로 학습\u001B[39;00m\n\u001B[0;32m---> 11\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m (batch, labels) \u001B[38;5;129;01min\u001B[39;00m tqdm(generator, ncols\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m75\u001B[39m):\n\u001B[1;32m     12\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m batch\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m1\u001B[39m:  \u001B[38;5;66;03m# 배치 크기가 1보다 큰 경우만 처리\u001B[39;00m\n\u001B[1;32m     13\u001B[0m         ipca\u001B[38;5;241m.\u001B[39mpartial_fit(batch)\n",
       "File \u001B[0;32m/media/goldenmine/Data/Project/DiasterDetectionCore/venv/lib/python3.10/site-packages/tqdm/notebook.py:250\u001B[0m, in \u001B[0;36mtqdm_notebook.__iter__\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    248\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m    249\u001B[0m     it \u001B[38;5;241m=\u001B[39m \u001B[38;5;28msuper\u001B[39m()\u001B[38;5;241m.\u001B[39m\u001B[38;5;21m__iter__\u001B[39m()\n\u001B[0;32m--> 250\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m obj \u001B[38;5;129;01min\u001B[39;00m it:\n\u001B[1;32m    251\u001B[0m         \u001B[38;5;66;03m# return super(tqdm...) will not catch exception\u001B[39;00m\n\u001B[1;32m    252\u001B[0m         \u001B[38;5;28;01myield\u001B[39;00m obj\n\u001B[1;32m    253\u001B[0m \u001B[38;5;66;03m# NB: except ... [ as ...] breaks IPython async KeyboardInterrupt\u001B[39;00m\n",
       "File \u001B[0;32m/media/goldenmine/Data/Project/DiasterDetectionCore/venv/lib/python3.10/site-packages/tqdm/std.py:1181\u001B[0m, in \u001B[0;36mtqdm.__iter__\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m   1178\u001B[0m time \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_time\n\u001B[1;32m   1180\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m-> 1181\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m obj \u001B[38;5;129;01min\u001B[39;00m iterable:\n\u001B[1;32m   1182\u001B[0m         \u001B[38;5;28;01myield\u001B[39;00m obj\n\u001B[1;32m   1183\u001B[0m         \u001B[38;5;66;03m# Update and possibly print the progressbar.\u001B[39;00m\n\u001B[1;32m   1184\u001B[0m         \u001B[38;5;66;03m# Note: does not call self.update(1) for speed optimisation.\u001B[39;00m\n",
-      "Cell \u001B[0;32mIn[5], line 13\u001B[0m, in \u001B[0;36mbatch_generator\u001B[0;34m(batch_size)\u001B[0m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01myield\u001B[39;00m np\u001B[38;5;241m.\u001B[39mstack(buffer), np\u001B[38;5;241m.\u001B[39mstack(labels)\n\u001B[1;32m     12\u001B[0m buffer\u001B[38;5;241m.\u001B[39mclear()\n\u001B[0;32m---> 13\u001B[0m \u001B[43mlabel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mclear\u001B[49m()\n",
+      "Cell \u001B[0;32mIn[3], line 13\u001B[0m, in \u001B[0;36mbatch_generator\u001B[0;34m(batch_size)\u001B[0m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01myield\u001B[39;00m np\u001B[38;5;241m.\u001B[39mstack(buffer), np\u001B[38;5;241m.\u001B[39mstack(labels)\n\u001B[1;32m     12\u001B[0m buffer\u001B[38;5;241m.\u001B[39mclear()\n\u001B[0;32m---> 13\u001B[0m \u001B[43mlabel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mclear\u001B[49m()\n",
       "\u001B[0;31mAttributeError\u001B[0m: 'Tensor' object has no attribute 'clear'"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "metadata": {
