--- a/incidents_eda.ipynb
+++ b/incidents_eda.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:18:07.373079Z",
-     "start_time": "2024-10-06T14:18:07.366924Z"
+     "end_time": "2024-10-06T14:21:41.882392Z",
+     "start_time": "2024-10-06T14:21:18.368031Z"
     }
    },
    "source": [
@@ -22,13 +22,13 @@
     "from incidents_dataset import load_compressed_images"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:18:08.873661Z",
-     "start_time": "2024-10-06T14:18:08.867048Z"
+     "end_time": "2024-10-06T14:27:55.459989Z",
+     "start_time": "2024-10-06T14:27:55.457195Z"
     }
    },
    "cell_type": "code",
@@ -45,23 +45,23 @@
     "        else:\n",
     "            yield np.stack(buffer), np.stack(labels)\n",
     "            buffer.clear()\n",
-    "            label.clear()"
+    "            labels.clear()"
    ],
    "id": "3595b72a7a6bcb24",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:18:29.545800Z",
-     "start_time": "2024-10-06T14:18:11.516616Z"
+     "end_time": "2024-10-06T14:29:54.579333Z",
+     "start_time": "2024-10-06T14:28:51.014593Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 2. Incremental PCA 설정\n",
-    "n_components = 50  # 축소할 차원 수\n",
+    "n_components = 2  # 축소할 차원 수\n",
     "ipca = IncrementalPCA(n_components=n_components)\n",
     "\n",
     "batch_size = 256\n",
@@ -97,28 +97,28 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6ffa775f857a4068993a2fbb57778637"
+       "model_id": "bbacbf2f80e94c9a86d71e43bf808f9d"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'Tensor' object has no attribute 'clear'",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[4], line 11\u001B[0m\n\u001B[1;32m      8\u001B[0m generator \u001B[38;5;241m=\u001B[39m batch_generator(batch_size)\n\u001B[1;32m     10\u001B[0m \u001B[38;5;66;03m# partial_fit: Incremental PCA의 주성분을 점진적으로 학습\u001B[39;00m\n\u001B[0;32m---> 11\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m (batch, labels) \u001B[38;5;129;01min\u001B[39;00m tqdm(generator, ncols\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m75\u001B[39m):\n\u001B[1;32m     12\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m batch\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m1\u001B[39m:  \u001B[38;5;66;03m# 배치 크기가 1보다 큰 경우만 처리\u001B[39;00m\n\u001B[1;32m     13\u001B[0m         ipca\u001B[38;5;241m.\u001B[39mpartial_fit(batch)\n",
-      "File \u001B[0;32m/media/goldenmine/Data/Project/DiasterDetectionCore/venv/lib/python3.10/site-packages/tqdm/notebook.py:250\u001B[0m, in \u001B[0;36mtqdm_notebook.__iter__\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    248\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m    249\u001B[0m     it \u001B[38;5;241m=\u001B[39m \u001B[38;5;28msuper\u001B[39m()\u001B[38;5;241m.\u001B[39m\u001B[38;5;21m__iter__\u001B[39m()\n\u001B[0;32m--> 250\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m obj \u001B[38;5;129;01min\u001B[39;00m it:\n\u001B[1;32m    251\u001B[0m         \u001B[38;5;66;03m# return super(tqdm...) will not catch exception\u001B[39;00m\n\u001B[1;32m    252\u001B[0m         \u001B[38;5;28;01myield\u001B[39;00m obj\n\u001B[1;32m    253\u001B[0m \u001B[38;5;66;03m# NB: except ... [ as ...] breaks IPython async KeyboardInterrupt\u001B[39;00m\n",
-      "File \u001B[0;32m/media/goldenmine/Data/Project/DiasterDetectionCore/venv/lib/python3.10/site-packages/tqdm/std.py:1181\u001B[0m, in \u001B[0;36mtqdm.__iter__\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m   1178\u001B[0m time \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_time\n\u001B[1;32m   1180\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m-> 1181\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m obj \u001B[38;5;129;01min\u001B[39;00m iterable:\n\u001B[1;32m   1182\u001B[0m         \u001B[38;5;28;01myield\u001B[39;00m obj\n\u001B[1;32m   1183\u001B[0m         \u001B[38;5;66;03m# Update and possibly print the progressbar.\u001B[39;00m\n\u001B[1;32m   1184\u001B[0m         \u001B[38;5;66;03m# Note: does not call self.update(1) for speed optimisation.\u001B[39;00m\n",
-      "Cell \u001B[0;32mIn[3], line 13\u001B[0m, in \u001B[0;36mbatch_generator\u001B[0;34m(batch_size)\u001B[0m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01myield\u001B[39;00m np\u001B[38;5;241m.\u001B[39mstack(buffer), np\u001B[38;5;241m.\u001B[39mstack(labels)\n\u001B[1;32m     12\u001B[0m buffer\u001B[38;5;241m.\u001B[39mclear()\n\u001B[0;32m---> 13\u001B[0m \u001B[43mlabel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mclear\u001B[49m()\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'Tensor' object has no attribute 'clear'"
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[7], line 13\u001B[0m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m (batch, labels) \u001B[38;5;129;01min\u001B[39;00m tqdm(generator, ncols\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m75\u001B[39m):\n\u001B[1;32m     12\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m batch\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m1\u001B[39m:  \u001B[38;5;66;03m# 배치 크기가 1보다 큰 경우만 처리\u001B[39;00m\n\u001B[0;32m---> 13\u001B[0m         \u001B[43mipca\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpartial_fit\u001B[49m\u001B[43m(\u001B[49m\u001B[43mbatch\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     15\u001B[0m \u001B[38;5;66;03m# 4. 학습된 Incremental PCA를 사용하여 데이터 차원 축소\u001B[39;00m\n\u001B[1;32m     16\u001B[0m \u001B[38;5;66;03m# 다시 generator를 사용하여 변환\u001B[39;00m\n\u001B[1;32m     17\u001B[0m transformed_data \u001B[38;5;241m=\u001B[39m []\n",
+      "File \u001B[0;32m~/Develop/Python/DiasterDetectionCore/.venv/lib/python3.10/site-packages/sklearn/base.py:1473\u001B[0m, in \u001B[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001B[0;34m(estimator, *args, **kwargs)\u001B[0m\n\u001B[1;32m   1466\u001B[0m     estimator\u001B[38;5;241m.\u001B[39m_validate_params()\n\u001B[1;32m   1468\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m config_context(\n\u001B[1;32m   1469\u001B[0m     skip_parameter_validation\u001B[38;5;241m=\u001B[39m(\n\u001B[1;32m   1470\u001B[0m         prefer_skip_nested_validation \u001B[38;5;129;01mor\u001B[39;00m global_skip_validation\n\u001B[1;32m   1471\u001B[0m     )\n\u001B[1;32m   1472\u001B[0m ):\n\u001B[0;32m-> 1473\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mfit_method\u001B[49m\u001B[43m(\u001B[49m\u001B[43mestimator\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/Develop/Python/DiasterDetectionCore/.venv/lib/python3.10/site-packages/sklearn/decomposition/_incremental_pca.py:356\u001B[0m, in \u001B[0;36mIncrementalPCA.partial_fit\u001B[0;34m(self, X, y, check_input)\u001B[0m\n\u001B[1;32m    345\u001B[0m     mean_correction \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39msqrt(\n\u001B[1;32m    346\u001B[0m         (\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mn_samples_seen_ \u001B[38;5;241m/\u001B[39m n_total_samples) \u001B[38;5;241m*\u001B[39m n_samples\n\u001B[1;32m    347\u001B[0m     ) \u001B[38;5;241m*\u001B[39m (\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmean_ \u001B[38;5;241m-\u001B[39m col_batch_mean)\n\u001B[1;32m    348\u001B[0m     X \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mvstack(\n\u001B[1;32m    349\u001B[0m         (\n\u001B[1;32m    350\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39msingular_values_\u001B[38;5;241m.\u001B[39mreshape((\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m1\u001B[39m)) \u001B[38;5;241m*\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcomponents_,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    353\u001B[0m         )\n\u001B[1;32m    354\u001B[0m     )\n\u001B[0;32m--> 356\u001B[0m U, S, Vt \u001B[38;5;241m=\u001B[39m \u001B[43mlinalg\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msvd\u001B[49m\u001B[43m(\u001B[49m\u001B[43mX\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfull_matrices\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcheck_finite\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m)\u001B[49m\n\u001B[1;32m    357\u001B[0m U, Vt \u001B[38;5;241m=\u001B[39m svd_flip(U, Vt, u_based_decision\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[1;32m    358\u001B[0m explained_variance \u001B[38;5;241m=\u001B[39m S\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m2\u001B[39m \u001B[38;5;241m/\u001B[39m (n_total_samples \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m)\n",
+      "File \u001B[0;32m~/Develop/Python/DiasterDetectionCore/.venv/lib/python3.10/site-packages/scipy/linalg/_decomp_svd.py:160\u001B[0m, in \u001B[0;36msvd\u001B[0;34m(a, full_matrices, compute_uv, overwrite_a, check_finite, lapack_driver)\u001B[0m\n\u001B[1;32m    156\u001B[0m lwork \u001B[38;5;241m=\u001B[39m _compute_lwork(gesXd_lwork, a1\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m], a1\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m1\u001B[39m],\n\u001B[1;32m    157\u001B[0m                        compute_uv\u001B[38;5;241m=\u001B[39mcompute_uv, full_matrices\u001B[38;5;241m=\u001B[39mfull_matrices)\n\u001B[1;32m    159\u001B[0m \u001B[38;5;66;03m# perform decomposition\u001B[39;00m\n\u001B[0;32m--> 160\u001B[0m u, s, v, info \u001B[38;5;241m=\u001B[39m \u001B[43mgesXd\u001B[49m\u001B[43m(\u001B[49m\u001B[43ma1\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcompute_uv\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mcompute_uv\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlwork\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mlwork\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    161\u001B[0m \u001B[43m                      \u001B[49m\u001B[43mfull_matrices\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mfull_matrices\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moverwrite_a\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43moverwrite_a\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    163\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m info \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[1;32m    164\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m LinAlgError(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mSVD did not converge\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 7
   },
   {
    "metadata": {
@@ -131,16 +131,16 @@
    "source": [
     "# final_data는 차원이 축소된 데이터라고 가정\n",
     "# n_components = 2로 설정하여 시각화 용도로 다시 축소\n",
-    "pca_vis = PCA(n_components=2)\n",
-    "data_2d = pca_vis.fit_transform(final_data)\n",
+    "# pca_vis = PCA(n_components=2)\n",
+    "# data_2d = pca_vis.fit_transform(final_data)\n",
     "\n",
     "# Isolation Forest를 사용하여 이상치 탐지\n",
     "iso_forest = IsolationForest(contamination=0.05, random_state=42)  # contamination: 이상치 비율\n",
     "outlier_labels = iso_forest.fit_predict(final_data)\n",
     "\n",
     "# 정상 데이터와 이상치를 분리\n",
-    "normal_data = data_2d[outlier_labels == 1]\n",
-    "outlier_data = data_2d[outlier_labels == -1]\n",
+    "normal_data = final_data[outlier_labels == 1]\n",
+    "outlier_data = final_data[outlier_labels == -1]\n",
     "\n",
     "# 시각화\n",
     "plt.figure(figsize=(12, 8))\n",
