--- a/incidents_eda.ipynb
+++ b/incidents_eda.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "code",
    "source": [
     "def batch_generator(batch_size):\n",
-    "    generator = load_compressed_images('cached_train.bin')\n",
+    "    generator = load_compressed_images('dataset/cached_train.bin')\n",
     "    \n",
     "    buffer = []\n",
     "    labels = []\n",
